# Sentinella

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
infra/kubernetes/helm/sentinella-chart/: Chart.yaml  values.yaml
infra/kubernetes/helm/sentinella-chart/templates/: _helpers.tpl  deployment.yaml  (+2 more)
infra/terraform/: main.tf  outputs.tf  variables.tf
notebooks/evaluation/: evaluation_demo.ipynb
sdks/javascript/: package.json
sdks/javascript/src/: index.ts
sdks/python/: setup.py
sdks/python/sentinella/: __init__.py  client.py
src/: __init__.py
src/async_processing/: __init__.py  queue_manager.py
src/cache/: __init__.py  redis_client.py  semantic_cache.py
src/connection_pool/: __init__.py  pool_manager.py
src/dashboard/: __init__.py  routes.py
src/evaluator/: __init__.py  evaluator.py
src/evaluator/datasets/: golden_dataset.json
src/finetuning/: __init__.py  finetune_manager.py
src/gateway/: __init__.py  main.py  models.py
src/memory/: __init__.py  memory_manager.py
src/models/: __init__.py  conversation.py  prompt_template.py  tenant.py  webhook.py
src/observability/: __init__.py  tracer.py
src/prompts/: __init__.py  optimizer.py  template_manager.py
src/rate_limiter/: __init__.py  limiter.py
src/router/: __init__.py  fallback.py  router.py
src/streaming/: __init__.py  stream_handler.py
src/tenancy/: __init__.py  tenant_manager.py
src/tools/: __init__.py  tool_manager.py
src/webhooks/: __init__.py  webhook_manager.py
tests/: __init__.py  test_cache.py  test_router.py
