[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinella"
version = "0.1.0"
description = "Enterprise AI Gateway with intelligent routing and evaluation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Sentinella Team"}
]
keywords = ["ai", "llm", "gateway", "litellm", "langfuse"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "litellm>=1.17.0",
    "langfuse>=2.19.0",
    "redis>=5.0.1",
    "httpx>=0.25.2",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
]
eval = [
    "ragas>=0.1.7",
    "datasets>=2.14.7",
    "sentence-transformers>=2.2.2",
]
notebooks = [
    "jupyter>=1.0.0",
    "notebook>=7.0.6",
    "ipykernel>=6.26.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

